# stitched_together-fluff_on_the_road

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.zed/: debug.json  settings.json  tasks.json
cmake/: SetupCore.cmake  SetupDebugExtern.cmake  SetupEngine.cmake  SetupExtern.cmake
scripts/: generate_hashes.py
src/: main.cpp
src/core/: hash.hpp  logger.cpp  logger.hpp
src/engine/core/: logger.cpp  logger.h  logger.hpp
src/utils/: logger.cpp  logger.hpp
